fix overflow on small screens

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -26,6 +26,7 @@ ul.ui-autocomplete {
 {
     .screen-reactor {
         width:360px;
+        overflow-x: hidden;
     }
 }
 
